金字塔原理读书笔记

--- a/_posts/2021-10-19-potions请求.md
+++ b/_posts/2021-10-19-potions请求.md
@@ -50,4 +50,4 @@ Accept/Accept-Language/Content-Language/Content-Type/DPR/Downlink/Save-Data/View
 3. Content-Type 的值不属于下列之一:	 
 application/x-www-form-urlencoded、multipart/form-data、text/plain
 
-所以之所以会导致上诉提到的问题，其实就是满足了第三个条件。
+所以之所以会导致上述提到的问题，其实就是满足了第三个条件。
