修改文章标题

--- a/_posts/2022-01-19-babel配置文件.md
+++ b/_posts/2022-01-19-babel配置文件.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
 title:      babel 配置文件
-date:       2022-01-11
+date:       2022-01-19
 author:     shaokang
 header-img: img/babel.png
 catalog: true
@@ -15,9 +15,9 @@ tags:
 ### 2. 配置文件类型
 先看下[官方文档](https://babel.docschina.org/docs/en/config-files/)中的介绍，babel 有两种并行的配置文件方式，可以一起使用，也可以单独使用。
 
-- 项目范围的配置
- * babel.config.json 文件，以及不同扩展名的文件（.js, .cjs, .mjs）
-- 相对文件的配置
+1. 项目范围的配置
+ - babel.config.json 文件，以及不同扩展名的文件（.js, .cjs, .mjs）
+2. 相对文件的配置
  * .babelrc.json 文件，以及不同扩展名的文件（.babelrc, .js, .cjs, .mjs）
  * 带有 "babel" key 的 package.json 文件
 
@@ -27,7 +27,7 @@ tags:
 本质上有两种不同作用的配置文件：babel.config.json 和 .babelrc.json。文件支持 .json，.js，.cjs 和 .mjs 扩展名，出于兼容性原因，.babelrc 是 .babelrc.json 的别名。
 
 babel.config.json 和 .babelrc.json 被解析为 JSON。比如配置这个样子：
-```json
+```
 {
     "presets": ["env", "react"],
     "plugins": ["transform-class-properties"]
@@ -48,7 +48,7 @@ js 文件配置：
 ```
 
 package.json 文件配置：
-```json
+```
 {
     "name": "demo",
     "version": "1.0.0",
