--- a/_posts/2022-01-17-如何写作.md
+++ b/_posts/2022-01-17-如何写作.md
@@ -1,3 +1,13 @@
+---
+layout:     post
+title:      随笔
+date:       2022-01-17
+author:     shaokang
+header-img: img/home-bg-o.jpg
+catalog: true
+tags:
+    - babel
+---
 
 ### 背景
 最近工作上出了点问题，给团队带来了一些小麻烦，这个经历让我意识到了自己的不足和缺陷。结合最近在看 《清单革命》、《学会写作》，对这段时间做一些复盘和认知。也正是受了 《学会写作》书中的启发，让我意识到提高写作的办法就是需要多写。尽管在此之前我还看了《金字塔原理》，也了解到了一些写作的技巧，但写出来的东西还是差强人意，这或许还是自己的写作量不够导致，因此在这也立一个 flag，在此后一定要多花时间在写作上。即使一开始看不到显著的提升，还需持之以恒。
