整理下格式

--- a/_posts/2022-07-05-图片懒加载.md
+++ b/_posts/2022-07-05-图片懒加载.md
@@ -31,6 +31,7 @@ tags:
 ```
 
 其次获取图距离顶部的距离，这里有两种办法，下面依次来介绍。
+
 ① getBoundingClientRect API 根据 top 值得到顶部距离
 ```
 function lazyload() {
@@ -55,7 +56,8 @@ const callback = entries.forEach((item) => {
 })
 ```
 
-方案对比：方案 1 通过监听存放图片的滚动容器的滚动事件或者整个页面的滚动事件，在滚动事件触发的时候调用图片元素的 getBoundingClientRect() 函数来进行可见性比对。这种方式是在事件触发的时候同步进行，如果运算量过大极有可能会导致主线程阻塞，从而页面卡顿。而方案 2 就是一个高性能的元素可见性变化解决方案，所以推荐用方案 2。
+方案对比：方案 1 通过监听存放图片的滚动容器的滚动事件或者整个页面的滚动事件，在滚动事件触发的时候调用图片元素的 getBoundingClientRect() 函数来进行可见性比对。这种方式是在事件触发的时候同步进行，如果运算量过大极有可能会导致主线程阻塞，从而页面卡顿。  
+而方案 2 就是一个高性能的元素可见性变化解决方案，所以推荐用方案 2。
 
 ### IntersectionObserver 和 MutationObserver
 上文提到 IntersectionObserver 来实现图片懒加载，与之类似的一个能力是 MutationObserver。下面我们详细看下这两个能力。
@@ -87,6 +89,7 @@ entries 对象中每个条目 IntersectionObserverEntry 对象提供目标元素
     __proto__: IntersectionObserverEntry
 }
 ```
+
 |属性名|含义|
 |:----|:--|
 |time: number|可见性发生变化的时间，是一个高精度时间戳，单位为毫秒|
@@ -119,6 +122,7 @@ const mo = new MutationObserver(cb);
 mo.observe(element, config); // 开始监听
 ```
 第一个参数是监听的节点, 第二个是监听的参数, 可以选择监听属性, 节点增删, 后代节点的增删, 文本节点的增删及移动.
+```
 {
     attributes: true,       // 属性节点的变动
     characterData: true,    // 文本节点的变动
@@ -128,12 +132,12 @@ mo.observe(element, config); // 开始监听
     characterDataOldValue: true,  // 是否记录原来的文本数据
     attributeFilter:[]      // 指定监听特定的属性
 }
-
+```
 2. disconnect
 停止监听，调用该方法后，DOM 再发生变动，也不会触发观察器。
 
 3. takeRecords
-用来在下一次事件触发前立即清除所有变动记录，即不再处理未处理的变动。该方法返回当下积累的变动记录的数组。
+用来在下一次事件触发前立即清除所有变动记录，即不再处理未处理的变动。该方法返回当下积累的变动记录的数组。  
 MutationRecord 对象包含了 DOM 的相关信息，有如下属性：
 * type: 表示DOM变动的数据类型
 * target: 表示变动的目标节点
