整理下格式

--- a/_posts/2022-02-23-前端复习之路-JS篇.md
+++ b/_posts/2022-02-23-前端复习之路-JS篇.md
@@ -183,20 +183,21 @@ extends 实现继承
 Javascript 单线程任务被分为同步任务和异步任务。异步任务一种是宏任务（MacroTask）也叫Task，一种叫微任务（MicroTask）。每次单个宏任务执行完毕后，检查微任务队列是否为空，如果不为空，会按照先入先出的规则全部执行完微任务后，清空微任务队列， 然后再执行下一个宏任务。
 
 ### node 事件循环
-基于 Libuv 实现。node 调用栈执行完后会执行异步队列（nextTick -> 微任务队列），执行完后进入事件循环。首先判断 timer 队列是否有回调，后续进入 poll 轮训执行队列，如果存在事件任务则执行。如果不存在，会其他队列是否存在事件。比如检查 check 队列，执行 setImmediate 回调。若不存在则一直等待 i/o 事件回调。最后执行 close 的回调队列。
+基于 Libuv 实现。node 调用栈执行完后会执行异步队列（nextTick -> 微任务队列），执行完后进入事件循环。  
+首先判断 timer 队列是否有回调，后续进入 poll 轮训执行队列，如果存在事件任务则执行。如果不存在，会其他队列是否存在事件。比如检查 check 队列，执行 setImmediate 回调。若不存在则一直等待 i/o 事件回调。最后执行 close 的回调队列。  
 https://www.bilibili.com/video/BV13A4y1Q7N5/?spm_id_from=333.788
 
 
 ## 常见知识点
-1. Object.create(null) 和 {} 的区别？
+1. Object.create(null) 和 {} 的区别？  
 使用 Object.create(null) 创建的对象，没有任何属性，不会继承原型链上的属性。{} 相反。Object.create(null) 得到一个非常干净且可定制化的对象，能够节省 hasOwnProperty 和 for..in 带来的性能损失。
 
-2. for in 和 Objects.keys() 的区别？
+2. for in 和 Objects.keys() 的区别？  
 for in 一般用于遍历对象属性。会遍历自身可枚举的属性以及原型链上可枚举的属性。Object.keys 只会遍历自身可枚举的属性。
 
-3. hasOwnProperty 和 in 的区别？
+3. hasOwnProperty 和 in 的区别？  
 两者都能检查队形中是否存在指定属性。in 能检查实例属性和原型上的属性，hasOwnProperty 只能检查实例上的属性。
 
-4. 尾递归
+4. 尾递归  
 函数尾部调用自身。好处：只需要保存调用栈，复杂度为 O(1)。 普通递归需要用栈保存每一层的返回点、局部变量，调用过多会造成栈溢出，复杂度为 O(n)。
 
