--- a/_posts/2022-02-23-前端复习之路-工程化篇.md
+++ b/_posts/2022-02-23-前端复习之路-工程化篇.md
@@ -50,11 +50,11 @@ Common Module Definition 规范和 AMD 很相似，尽量保持简单，并与 C
 
 实现：Sea.js ；coolie
 
-#### AMD 和 CMD 区别： 
+#### AMD 和 CMD 区别：
 * 对于依赖的模块，AMD 是提前执行，CMD 是延迟执行。不过 RequireJS 从 2.0 开始，也改成可以延迟执行（根据写法不同，处理方式不同）。CMD 推崇 as lazy as possible.
 * AMD 推崇依赖前置，CMD 推崇依赖就近。
 
-ES6 Module 和 CommonJS 模块的区别： 
+#### ES6 Module 和 CommonJS 模块的区别：
 * CommonJS 是对模块的浅拷⻉，ES6 Module 是对模块的引⽤，即 ES6 Module 只存只读，不能改变其值，也就是指针指向不能变，类似const；
 * import 的接⼝是 read-only（只读状态），不能修改其变量值。 即不能修改其变量的指针指向，但可以改变变量内部指针指向，可以对 commonJS 对重新赋值（改变指针指向），但是对 ES6 Module赋值会编译报错。 
 * CommonJS 是执行阶段进行模块解析，ES6 Module 是编译阶段解析。
@@ -65,65 +65,53 @@ ES6 Module 和 CommonJS 模块的区别：
 
 ### webpack
 #### 1. module、chunk 和 bundle
-module: 只要是文件，都是一个module
-
+module: 只要是文件，都是一个module  
 chunk: 代码块，是webpack根据功能拆分出来的（chunk是无法在打包结果中看到的，打包结果中看到的是bundle），包含三种情况:
 * 你的项目入口(entry)
 * 通过import()动态引入的代码
 * 通过splitChunks拆分出来的代码
 
 bundle: bundle是webpack打包之后的各个文件，一般就是和chunk是一对一的关系，bundle就是对chunk进行编译压缩打包等处理之后的产出。
+
 我们直接写出来的是 module，webpack 处理时是 chunk，最后生成浏览器可以直接运行的 bundle。
 [参考](https://www.cnblogs.com/skychx/p/webpack-module-chunk-bundle.html)
 
 #### 2. hash、chunkhash、contenthash
-hash 计算与整个项目的构建相关；
-
-chunkhash 计算与同一 chunk 内容相关；
-
-contenthash 计算与文件内容本身相关。
-[参考](https://www.cnblogs.com/skychx/p/webpack-hash-chunkhash-contenthash.html)
+hash 计算与整个项目的构建相关；  
+chunkhash 计算与同一 chunk 内容相关；  
+contenthash 计算与文件内容本身相关。[参考](https://www.cnblogs.com/skychx/p/webpack-hash-chunkhash-contenthash.html)
 
 #### 3. devtool
-inline: Source Map内容通过base64放在js文件中引入。
-
-hidden: 代码中没有sourceMappingURL，浏览器不自动引入Source Map。
-
-eval: 生成代码和Source Map内容混淆在一起，通过eval输出。
-
-nosources: 使用这个关键字的Source Map不包含sourcesContent，调试时只能看到文件信息和行信息，无法看到源码。
-
-cheap: 不包含列信息，并且源码是进过loader处理过的
-
+inline: Source Map内容通过base64放在js文件中引入。  
+hidden: 代码中没有sourceMappingURL，浏览器不自动引入Source Map。  
+eval: 生成代码和Source Map内容混淆在一起，通过eval输出。  
+nosources: 使用这个关键字的Source Map不包含sourcesContent，调试时只能看到文件信息和行信息，无法看到源码。  
+cheap: 不包含列信息，并且源码是进过loader处理过的  
 cheap-module: 不包含列信息，源码是开发时的代码
-[参考](https://juejin.cn/post/6844904201311485966#heading-4)
+[参考](https://juejin.cn/post/6844904201311485966#heading-4)  
 
 #### 4. webpack 中，filename 和 chunkFilename 的区别是什么？
-filename 指列在 entry 中，打包后输出的文件的名称。
-
+filename 指列在 entry 中，打包后输出的文件的名称。  
 chunkFilename 指未列在 entry 中，却又需要被打包出来的文件的名称。
 [参考](https://www.cnblogs.com/skychx/p/webpack-filename-chunkFilename.html)
 
 #### 5. SplitChunks
 chunks选项，决定要提取那些模块。
 默认是async：只提取异步加载的模块出来打包到一个文件中。
-异步加载的模块：通过import('xxx')或require(['xxx'],() =>{})加载的模块。
-
+异步加载的模块：通过import('xxx')或require(['xxx'],() =>{})加载的模块。  
 initial：提取同步加载和异步加载模块，如果xxx在项目中异步加载了，也同步加载了，那么xxx这个模块会被提取两次，分别打包到不同的文件中。
-同步加载的模块：通过 import xxx或require('xxx')加载的模块。
-
+同步加载的模块：通过 import xxx或require('xxx')加载的模块。  
 all：不管异步加载还是同步加载的模块都提取出来，打包到一个文件中。
 [参考](https://zhuanlan.zhihu.com/p/152097785)
 
 #### 6. webpackChunkName、webpackPrefetch、webpackPreload
-webpackChunkName 是为预加载的文件取别名
-
-webpackPrefetch 会在浏览器闲置下载文件
-
+webpackChunkName 是为预加载的文件取别名  
+webpackPrefetch 会在浏览器闲置下载文件  
 webpackPreload 会在父 chunk 加载时并行下载文件。
 
 ### vite
 现在常用的构建工具如 webpack，主要是通过抓取 - 编译 - 构建整个应用的代码生成一份编译、优化后能良好兼容各个浏览器的生产环境代码。在开发环境流程也基本相同，需要先将整个应用构建打包后，再把打包后的代码交给 dev server。
+
 webpack 等构建工具的诞生给前端开发带来了极大的便利，但随着前端业务的复杂化，js 代码量呈指数增长，打包构建时间越来越久，dev server 性能遇到瓶颈：
 * 缓慢的服务启动：大型项目中 dev server 启动时间达到几十秒甚至几分钟
 * 缓慢的 HMR 热更新: 即使采用了 HMR 模式，其热更新速度也会随着应用规模的增长而显著下降，
