--- a/_posts/2022-02-23-前端复习之路-操作系统篇.md
+++ b/_posts/2022-02-23-前端复习之路-操作系统篇.md
@@ -13,7 +13,7 @@ tags:
 
 做个简单的比喻：进程=火车，线程=车厢
 
-线程在进程下行进（单纯的车厢无法运行）
+* 线程在进程下行进（单纯的车厢无法运行）
 * 一个进程可以包含多个线程（一辆火车可以有多个车厢）
 * 不同进程间数据很难共享（一辆火车上的乘客很难换到另外一辆火车，比如站点换乘）
 * 同一进程下不同线程间数据很易共享（A车厢换到B车厢很容易）
