--- a/_posts/2022-02-23-前端复习之路-CSS篇.md
+++ b/_posts/2022-02-23-前端复习之路-CSS篇.md
@@ -20,13 +20,14 @@ id选择器、class选择器、属性选择器、*、伪类选择器、伪元素
 5.通配符、子类选择器、兄弟选择器，如*, >, +，权值为0000  
 6.继承的样式没有权值  
 
-!important>行内样式>ID选择器 > 类选择器 | 属性选择器 | 伪类选择器 > 元素选择器
+!important > 行内样式 > ID选择器 > (类选择器 | 属性选择器 | 伪类选择器) > 元素选择器
 
 注意权重的计算不能越级，比如：无论多少个class组成的选择器，都没有一个ID选择器权重高。
-(很早前的浏览器积累到一定数量是行的)[https://www.zhangxinxu.com/wordpress/2012/08/256-class-selector-beat-id-selector/]
+[很早前的浏览器积累到一定数量是行的](https://www.zhangxinxu.com/wordpress/2012/08/256-class-selector-beat-id-selector/)
 
 
 ### 定位
+
 |属性|说明|
 |:--|:--|
 |absolute|生成绝对定位的元素，相对于static定位以外的一个父元素进行定位。元素的位置通过left、top、right、bottom属性进行规定。|
@@ -36,13 +37,14 @@ id选择器、class选择器、属性选择器、*、伪类选择器、伪元素
 |inherit|规定从父元素继承position属性的值|
 |sticky|定位类似于相对定位，（当它表现为 fixed 定位的特性时）会根据最近的滚动容器（nearest scrollport）自动计算偏移量。|
 
+
 #### sticky
-它的行为就像 position:relative; 而当页面滚动超出目标区域时，它的表现就像 position:fixed;，它会固定在目标位置。  
+它的行为就像 position:relative; 而当页面滚动超出目标区域时，它的表现就像 position:fixed;，它会固定在目标位置。
+
 元素定位表现为在跨越特定阈值前为相对定位，之后为固定定位。这个特定阈值指的是 top, right, bottom 或 left 之一，换言之，指定 top, right, bottom 或 left 四个阈值其中之一，才可使粘性定位生效。否则其行为与相对定位相同。
 
-设定为 position: sticky 的元素的任意父节点的 overflow 属性必须是 visible，否则 position:sticky 不会生效；  
-在满足上述情况下，设定了 position: sticky 的元素的父容器的高度必须大于当前元素，否则也会失效。（当然，此时，sticky 吸附的基准元素就会变成父元素）  
-如果 position: sticky 元素的任意父节点定位设置为 position: overflow，则父容器无法进行滚动，所以 position:sticky 元素也不会有滚动然后固定的情况  
+设定为 position: sticky 的元素的任意父节点的 overflow 属性必须是 visible，否则 position:sticky 不会生效；
+
 在满足上述情况下，设定了 position: sticky 的元素的父容器的高度必须大于当前元素，否则也会失效。（当然，此时，sticky 吸附的基准元素就会变成父元素）
 
 ### BFC
