补充近期 react 、nodejs 等资料

--- a/_posts/2022-01-11-babel相关知识.md
+++ b/_posts/2022-01-11-babel相关知识.md
@@ -232,6 +232,13 @@ new Promise(function (resolve, reject) {
 ```
 corejs 选项可以配置使用的是 @babel/runtime-corejs2 还是 @babel/runtime-corejs3。
 corejs: 2 仅支持全局变量（例如Promise）和静态属性（例如Array.from），corejs: 3 还支持实例属性（例如[].includes）。项目中一般都选 corejs3
+>若是不开启corejs选项，在转换时，Babel 使用的一些helper会假设已经存在全局的polyfill；开启之后，Babel 会认为全局的polyfill不存在，并会引入corejs来完成原来需要polyfill才能完成的工作。
+
+>指向选项的值为数字，即选择哪个版本的@babel-runtime-corejs:
+配置corejs为3，需要预先安装@babel/runtime-corejs3
+配置corejs为2，需要预先安装@babel/runtime-corejs2
+配置corejs为false，需要预先安装@babel/runtime
+#
 
 ```js
 class Student {
@@ -282,6 +289,13 @@ new _promise["default"](function (resolve, reject) {
 - 实现对辅助函数的复用，解决转译语法层时出现的代码冗余
 - 解决转译 api 层出现的全局变量污染
 
+
+transform-runtime转换器插件会做三件事：
+* 当你使用generators/async函数时，自动引入@babel/runtime/regenerator（可通过regenerator选项切换）(它会对将generator函数转换为使用不污染全局作用的regenerator运行时，可以理解为做了一层兼容，因为 generator 是 es6 的语法)（所以当我们引入它之后项目可以自动支持 generators/async 语法。当然我们也可以用 generator 的插件来支持这种语法，如 [@babel/plugin-transform-runtime
+](https://babeljs.io/docs/en/babel-plugin-transform-runtime.html)、[@babel/plugin-proposal-async-generator-functions
+](https://babeljs.io/docs/en/babel-plugin-proposal-async-generator-functions)）
+* 若是需要，将使用core-js作为helpers，而不是假定用户已经使用了polyfill（可通过corejs选项切换）
+* 自动移除内联的 Babel helpers并取而代之使用@babel/runtime/helpers模块（可通过helpers选项切换）
 ### 总结
 目前，babel处理兼容性问题有两种方案：
 
