--- a/_posts/2022-02-23-前端复习之路-Vue篇.md
+++ b/_posts/2022-02-23-前端复习之路-Vue篇.md
@@ -52,6 +52,31 @@ react可以通过高阶组件（HOC）来扩展，而Vue需要通过mixins来扩
 ● React ==> React Native  
 ● Vue ==> Weex
 
+### Vue2 vs Vue3
+Vue3 新特性，vue3 相比 vue2：
+* 速度更快：
+  - 重写了虚拟 DOM 的实现、diff 算法优化
+  - 编译模板的优化
+  - 更高效的组件初始化
+  - update 性能提高 1.3-2 倍
+  - SSR 速度提高了 2-3 倍
+* 体积减少：
+  - tree-shaking
+* 更易维护
+  - composition Api
+  - 更好的Typescript支持
+  - 编译器重写
+* 更接近原生
+  - 自定义渲染 Api
+* 更易使用
+  - 响应式 Api
+
+新增特性：
+* framents 【支持多个根节点】
+* Teleport 【通过Teleport，我们可以在组件的逻辑位置写模板代码，然后在 Vue 应用范围之外渲染它】
+* composition Api
+* createRenderer 【能够构建自定义渲染器，将 vue 的开发模型扩展到其他平台】
+
 
 ### 双向数据绑定
 Vue.js 是采用数据劫持结合发布者-订阅者模式的方式，通过Object.defineProperty()来劫持各个属性的setter，getter，在数据变动时发布消息给订阅者，触发相应的监听回调。主要分为以下几个步骤：
