--- a/_posts/2022-02-23-前端复习之路-网络篇.md
+++ b/_posts/2022-02-23-前端复习之路-网络篇.md
@@ -7,6 +7,18 @@ catalog: true
 tags:
     - 复习
 ---
-1. RESTful
+
+## RESTful
 URL 定位资源，用 HTTP 动词（GET,POST,DELETE）描述操作。
 
+## 浏览器地址栏输入网址整个过程
+（1）解析 URL：分析传输协议和资源路径，判断协议或主机名是否合法，不合法将内容传递给搜索引擎。没问题的话检查是否出现非法字符，并对其转义。  
+（2）缓存判断：强缓存和协商缓存。  
+（3）DNS 解析：先查本地是否有域名的 ip 地址缓存（浏览器、hosts 文件）。若没有会想本地 DNS 服务器发起请求，检查是否存在缓存。若还是没有，解析想根域名服务器发起请求。依次查找顶级域名服务器、权威域名服务器，直到拿到 IP 地址返回给用户。（用户向本地 DNS 请求输入递归请求，本地 DNS 向各级域名请求属于迭代请求）  
+（4）获取 MAC 地址：当浏览器得到 IP 地址后，数据传输还需要知道目的主机 MAC 地址，因为应用层下发数据给传输层，TCP 协议会指定源端口号和目的端口号，然后下发给网络层。网络层会将本机地址作为源地址，获取的 IP 地址作为目的地址。然后将下发给数据链路层，数据链路层的发送需要加入通信双方的 MAC 地址，本机的 MAC 地址作为源 MAC 地址，目的 MAC 地址需要分情况处理。通过将 IP 地址与本机的子网掩码相与，可以判断是否与请求主机在同一个子网里，如果在同一个子网里，可以使用 APR 协议获取到目的主机的 MAC 地址，如果不在一个子网里，那么请求应该转发给网关，由它代为转发，此时同样可以通过 ARP 协议来获取网关的 MAC 地址，此时目的主机的 MAC 地址应该为网关的地址.  
+（5）TCP 三次握手：首先客户端向服务器发送一个 SYN 连接请求报文段和一个随机序号，服务端接收到请求后向服务器端发送一个 SYN ACK报文段，确认连接请求，并且也向客户端发送一个随机序号。客户端接收服务器的确认应答后，进入连接建立的状态，同时向服务器也发送一个ACK 确认报文段，服务器端接收到确认后，也进入连接建立状态，此时双方的连接就建立起来了。  
+（6）HTTPS 握手：如果使用的是 HTTPS 协议，在通信前还存在 TLS 的一个四次握手的过程。首先由客户端向服务器端发送使用的协议的版本号、一个随机数和可以使用的加密方法。服务器端收到后，确认加密的方法，也向客户端发送一个随机数和自己的数字证书。客户端收到后，首先检查数字证书是否有效，如果有效，则再生成一个随机数，并使用证书中的公钥对随机数加密，然后发送给服务器端，并且还会提供一个前面所有内容的 hash 值供服务器端检验。服务器端接收后，使用自己的私钥对数据解密，同时向客户端发送一个前面所有内容的 hash 值供客户端检验。这个时候双方都有了三个随机数，按照之前所约定的加密方法，使用这三个随机数生成一把秘钥，以后双方通信前，就使用这个秘钥对数据进行加密后再传输。  
+
+
+## HTTPS 加密原理
+see: https://zhuanlan.zhihu.com/p/43789231
