--- a/_posts/2022-09-16-input组件问题.md
+++ b/_posts/2022-09-16-input组件问题.md
@@ -48,6 +48,21 @@ this.nextTick(() => {
 const phoneNoFormat = (e) => {
     return e.target.value.replace(/[^\d]/g, "");
 };
+
+<Form.Item
+    {...formItemLayout}
+    name="username"
+    label="Name"
+    rules={[
+        {
+        required: true,
+        message: "Please input your name"
+        }
+    ]}
+    getValueFromEvent={phoneNoFormat}
+>
+    <Input placeholder="Please input your name" />
+</Form.Item>
 ```
 
 MVVM 框架也可以考虑在 watch 监听中修改输入的值
