--- a/_posts/2022-09-21-react.md
+++ b/_posts/2022-09-21-react.md
@@ -3,7 +3,7 @@ layout:     post
 title:      React
 date:       2022-09-21
 author:     shaokang
-header-img: img/babel.png
+header-img: img/react.png
 catalog: true
 tags:
     - React
