--- a/_posts/2022-02-23-前端复习之路-网络篇.md
+++ b/_posts/2022-02-23-前端复习之路-网络篇.md
@@ -22,3 +22,36 @@ URL 定位资源，用 HTTP 动词（GET,POST,DELETE）描述操作。
 
 ## HTTPS 加密原理
 see: https://zhuanlan.zhihu.com/p/43789231
+
+### 准备工作（数字证书认证机构的业务流程）
+1. 服务器的运营人员向第三方机构 CA 提交`公钥`、组织信息、个人信息（域名）等信息并申请认证。
+2. CA 通过线上、线下等多种手段验证申请者提供信息的真实性。
+3. CA 审核通过后，向申请者签发证书。证书包含了`申请者的公钥`、申请者的组织信息和个人信息、CA 的信息、有效时间、证书序列号等信息的明文，同时包含一个签名（使用散列函数计算出公开的明文信息的`信息摘要`，然后通过 CA 的`私钥`对其加密得到签名）。
+
+### 请求过程
+1. 客户端发起请求。
+2. 服务端将之前的签发的证书返回给客户端。
+3. 客户端验证该证书：证书是否再有效期内，证书的用途是否匹配客户端请求站点，是否被吊销、上一级证书是否有效...。
+4. 客户端使用 CA 提前植入到浏览器的`公钥`，解密获得信息摘要。然后用 HASH 函数对原文再重新生成一个摘要信息，与解密得到的信息进行对比，如果相同则该信息没有被修改过。
+5. 客户端使用伪随机数生成器生成`对称密钥`，然后用服务端的`公钥`对其加密发送给服务端。
+6. 服务端通过`私钥`解密获得`对称密钥`，使用该密钥对内容进行加密。
+7. 客户端使用密钥对内容进行解密。
+
+## TLS 握手各版本差异
+参考：https://juejin.cn/post/6895624327896432654
+
+
+
+## 首屏性能优化
+1. 资源加载优化
+   * 减少资源大小：代码压缩、Gzip、图片压缩、代码拆分
+   * 减少 HTTP 请求数：Http 强缓存、Service Worker、本地存储、合并请求（nginx-http-concat、雪碧图）
+   * 提高 HTTP 请求响应速度：CDN、http 弱缓存、DNS Prefetch、http2
+   * 优化资源加载时机：按需加载、懒加载、预加载（preload）
+   * 优化资源、内容加载方式：客户端 H5 考虑离线包、内容直出
+2. 页面渲染优化
+   * 优化 html：js 外链放在底部、css 外链放在顶部、减少 DOM 数量
+   * 优化 js、css：webworker、长任务分片执行、减少重排重绘、降低 css 选择器复杂性
+   * 优化动画效果：使用 requestAnimationFrame、使用 transform 和 opacity 实现动画、使用 will-change 或者 translateZ 来提升某些元素到新的合成层。
+
+
