--- a/_posts/2022-02-23-前端复习之路-HTML篇.md
+++ b/_posts/2022-02-23-前端复习之路-HTML篇.md
@@ -41,3 +41,14 @@ href 是 Hypertext Reference 的缩写，指向网络资源所在位置，建立
 DOMContentLoaded: html 解析后执行，可执行多个回调  
 onLoad：所有元素加载完成，执行最后一个回调。  
 https://juejin.cn/post/7027728332972113927#heading-11
+
+### defer 和 async 的区别
+两个属性都是去异步加载外部的 js 脚本文件（与文档的加载是并行的），但执行顺序不一样：
+* **async**：加载完成后就执行脚本，多个 async 的标签，不能保证加载的顺序。
+* **defer**：等待文档所有元素解析完成后执行，多个 defer 标签，按加载顺序执行。
+
+### JS 和 CSS 会阻塞解析吗？
+* link 标签的 CSS 不阻塞页面的解析，但阻塞页面渲染。(阻塞 render tree 的生成，可以避免页面样式闪烁)。
+* 内链或者外链 JS 脚本都会阻塞页面的解析和渲染。
+* CSS 会阻塞 JS 的执行（保证 JS 脚本拿到最新的 CSS 属性）。这种情况下 CSS 不仅阻塞 JS 的执行还阻塞了页面的解析（因为 JS 会同步阻塞页面解析）。
+* JS 会触发页面渲染。
