--- a/_posts/2022-02-23-前端复习之路-工程化篇.md
+++ b/_posts/2022-02-23-前端复习之路-工程化篇.md
@@ -214,9 +214,10 @@ Terser、UglifyJS 等 DCE 工具“摇”掉标记中无效的代码。
 ### Webpack 热更新（HMR）的实现原理
 1. 第一步，webpack watch 模式下，文件系统中某一个文件发生修改，webpack 监听到文件变化，根据配置文件对模块重新编译打包，并将打包后的代码通过 JS 对象保存在内存中。
 2. 第二步，webpack-dev-server 的中间件 webpack-dev-middleware 调用 webpack 暴露的 API 对代码变化进行监听，并且告诉 webpack 将代码打包到内存中。
-3. 第三步，webpack-dev-server 对文件变化的简童。当配置文件中设置 devServer.watchContentBase 为 true，Server 会监听配置文件夹中静态文件的变化，变化后通知浏览器进行 live reload（浏览器刷新）。
+3. 第三步，webpack-dev-server 对文件变化的监控。当配置文件中设置 devServer.watchContentBase 为 true，Server 会监听配置文件夹中静态文件的变化，变化后通知浏览器进行 live reload（浏览器刷新）。
 4. 第四部，webpack-dev-server 通过 sockjs 再浏览器端和服务器端建立 websocket 长连接，将 webpack 编译打包的各个阶段的状态信息告诉浏览器端，同时包括第三步的 Server 监听静态文件变化的信息。浏览器端根据 socket 消息进行不同操作，最主要的消息是新模板的 hash 值，后续根据该值进行 HMR。
 5. webpack-dev-server/client 端并不能请求更新的代码，也不会执行热更新模块操作，而是把这些工作交给 webpack。webpack/hot/dev-server 的工作是根据 webpack-dev-server/client 传递给它的信息以及 dev-server 的配置决定是刷新浏览器还是进行热更新。
 6. HotModuleReplacement.runtime 是客户端 HMR 的中枢，它接收上一步传递给他的新模块 hash 值，通过 JsonpMainTemplate.runtime 向 server 端发送 Ajax 请求，服务端返回 json，该 json 包含了所有要更新模块的 hash 值。获取更新列表后，该模块再次发起 jsonp 请求，获取最新的模块代码。
 7. HotModulePlugin 将会对新旧模块进行对比，决定是否更新模块，再决定更新模块后，检查模块之间的依赖关系，更新模块的同时更新模块间的依赖引用。
 8. 当 HMR 失败后，回到 live reload 操作。通过浏览器刷新获取最新打包代码。
+![HMR](/img/webpack-HMR.png)
