--- a/_posts/2022-02-23-前端复习之路-手写代码篇.md
+++ b/_posts/2022-02-23-前端复习之路-手写代码篇.md
@@ -154,3 +154,58 @@ Function.prototype.myApply = function(context) {
     return result;
 };
 ```
+
+
+## 异步任务调度
+```
+function asyncRetry(fn, times, timeout = 0) {
+  // fn必需
+  // times必需，且为大于0的正整数
+  times = parseInt(times);
+  if(times <= 0 || isNaN(times)) {
+    throw new TypeError("times必需是大于0的正整数");
+  }
+  // Number.isInteger()
+
+  return Promise.race([
+    // 错误后重复
+    new Promise(async (resolve, reject) => {
+      while(times--) {
+        try {
+          const res = await fn();
+          resolve(res);
+          break;
+        } catch (error) {
+          if(times <= 0) {
+            reject("retry error");
+          }
+        }
+      }
+    }),
+    // 超时任务
+    new Promise((resolve, reject) => {
+      setTimeout(() => {
+        reject("retry error");
+      }, timeout)
+    })
+  ]);
+}
+```
+
+## 正则
+下划线转驼峰
+```js
+function underscoreToCamelCase(str) {
+  return str.replace(/_([a-z])/g, function(match, group) {
+    return group.toUpperCase();
+  });
+}
+```
+驼峰转下划线
+```js
+function camelCaseToUnderscore(str) {
+  return str.replace(/([A-Z])/g, function(match, group) {
+    return "_" + group.toLowerCase();
+  });
+}
+```
