--- a/_posts/2022-02-23-前端复习之路-网络篇.md
+++ b/_posts/2022-02-23-前端复习之路-网络篇.md
@@ -40,18 +40,55 @@ see: https://zhuanlan.zhihu.com/p/43789231
 ## TLS 握手各版本差异
 参考：https://juejin.cn/post/6895624327896432654
 
-
-
 ## 首屏性能优化
+首屏时间计算方式
+```
+// 方案一：
+document.addEventListener('DOMContentLoaded', (event) => {
+    console.log('first contentful painting');
+});
+// 方案二：
+performance.getEntriesByName("first-contentful-paint")[0].startTime
+
+// performance.getEntriesByName("first-contentful-paint")[0]
+// 会返回一个 PerformancePaintTiming的实例，结构如下：
+{
+  name: "first-contentful-paint",
+  entryType: "paint",
+  startTime: 507.80000002123415,
+  duratio
+}
+```
+
 1. 资源加载优化
    * 减少资源大小：代码压缩、Gzip、图片压缩、代码拆分
    * 减少 HTTP 请求数：Http 强缓存、Service Worker、本地存储、合并请求（nginx-http-concat、雪碧图）
    * 提高 HTTP 请求响应速度：CDN、http 弱缓存、DNS Prefetch、http2
    * 优化资源加载时机：按需加载、懒加载、预加载（preload）
-   * 优化资源、内容加载方式：客户端 H5 考虑离线包、内容直出
+   * 优化资源、内容加载方式：客户端 H5 考虑离线包、内容直出、SSR
 2. 页面渲染优化
    * 优化 html：js 外链放在底部、css 外链放在顶部、减少 DOM 数量
    * 优化 js、css：webworker、长任务分片执行、减少重排重绘、降低 css 选择器复杂性
    * 优化动画效果：使用 requestAnimationFrame、使用 transform 和 opacity 实现动画、使用 will-change 或者 translateZ 来提升某些元素到新的合成层。
 
+## 页面渲染加载速度慢的原因
+页面渲染的过程，导致加载速度慢的因素可能如下：
 
+* 网络延时问题
+* 资源文件体积是否过大
+* 资源是否重复发送请求去加载了
+* 加载脚本的时候，渲染内容堵塞了
+
+## 正向代理（Forward Proxy）和 反向代理（Reverse Proxy）
+正向代理是位于客户端和目标服务器之间的代理服务器。
+当客户端发起请求时，请求先发送给正向代理服务器，然后由代理服务器代表客户端向目标服务器发送请求。
+客户端不直接与目标服务器通信，而是通过正向代理服务器进行通信，目标服务器不知道请求的真实来源。
+正向代理常用于绕过网络限制、访问被封锁的内容、提供匿名性等。例如，在某些国家或组织中，正向代理被用于访问被屏蔽的网站。
+
+反向代理是位于目标服务器和客户端之间的代理服务器。
+当客户端发起请求时，请求先发送到反向代理服务器，然后由代理服务器转发请求给后端的目标服务器。
+目标服务器不直接与客户端通信，而是通过反向代理服务器进行通信，客户端不知道请求的真实目标。
+反向代理常用于负载均衡、缓存、安全性等方面。例如，用于将请求分发到多台服务器，隐藏后端服务器的真实IP地址，提供缓存以加快响应速度等。
+
+总结：
+正向代理是客户端代理，代理客户端的请求；而反向代理是服务端代理，代理服务端的响应。正向代理隐藏客户端身份，用于访问被封锁的内容，而反向代理隐藏服务端身份，提供负载均衡和安全性等功能。
