--- a/_posts/2022-07-05-图片懒加载.md
+++ b/_posts/2022-07-05-图片懒加载.md
@@ -32,7 +32,7 @@ tags:
 
 其次获取图距离顶部的距离，这里有两种办法，下面依次来介绍。
 
-① getBoundingClientRect API 根据 top 值得到顶部距离
+① getBoundingClientRect API 根据 top 值得到顶部距离，距离小于窗口高度
 ```
 function lazyload() {
     const viewPortHeight = window.innerHeight || document.documentElement.clientHeight
@@ -43,7 +43,48 @@ function lazyload() {
 }
 ```
 
-② [推荐] IntersectionObserver 获取目标元素与其祖先元素或顶级文档视窗(viewport)交叉状态。
+完整代码
+```js
+let imgs = document.querySelectorAll('img');
+let lazyload = function(){
+    // 获取浏览器滚动高度
+    let scrollTop = document.body.scrollTop || document.documentElement.scrollTop;
+    // 获取浏览器可视高度
+    let height = window.innerHeight || document.documentElement.clientHeight;
+    for(let i = 0;i < imgs.length; i++){
+        // 如果元素距离文档顶部的高度小于浏览器的滚动高度加浏览器的可视高度，则需要加载
+        if(imgs[i].offsetTop < scrollTop + height ) {
+            // 已经加载的不会再进行加载，或者判断 src
+            if (imgs[i].alt != 'loaded'){
+                imgs[i].src = imgs[i].getAttribute('data-src'); //将data-src属性值赋值给src
+                imgs[i].alt = 'loaded'
+            }
+        }
+    }
+}
+//调用懒加载函数,加一个防抖函数
+function throttle(method,delay) {
+    let timer = null;
+    return function(){
+        clearTimeout(timer);
+        timer = setTimeout(function(){
+            method()
+        }, delay);
+    }
+}
+window.onscroll = throttle(lazyload,200);
+```
+
+② el.offsetTop <= viewPortHeight + document.documentElement.scrollTop
+```js
+
+const viewPortHeight = window.innerHeight || document.documentElement.clientHeight
+if (el.offsetTop - document.documentElement.scrollTop <= viewPortHeight) {
+    ......
+}
+```
+
+③ [推荐] IntersectionObserver 获取目标元素与其祖先元素或顶级文档视窗(viewport)交叉状态。
 ```
 var io = new IntersectionObserver(callback, options);
 io.observe(document.querySelector('img'))
