--- a/_posts/2022-02-23-前端复习之路-手写代码篇.md
+++ b/_posts/2022-02-23-前端复习之路-手写代码篇.md
@@ -209,3 +209,86 @@ function camelCaseToUnderscore(str) {
   });
 }
 ```
+
+## 实现 flat 方法
+```js
+function flat(arr) {
+  let result = [];
+  for (let i = 0; i < arr.length; i++) {
+    const cur = arr[i];
+
+    if (Array.isArray(cur)) {
+      result = result.concat(flat(cur))
+    }
+    else {
+      result.push(cur);
+    }
+  }
+  return result;
+}
+```
+
+指定扁平化的层次
+```js
+function customFlat(arr, depth = 1) {
+  let result = [];
+
+  function flatten(arr, currDepth) {
+    for (let i = 0; i < arr.length; i++) {
+      if (Array.isArray(arr[i]) && currDepth < depth) {
+        flatten(arr[i], currDepth + 1); // 递归调用 flatten 方法，并增加当前深度
+      } else {
+        result.push(arr[i]);
+      }
+    }
+  }
+
+  flatten(arr, 0);
+
+  return result;
+}
+```
+
+## 洋葱模型
+```js
+async function mid1(ctx, next) {
+  console.log(1);
+  await next();
+  console.log(4);
+}
+
+async function mid2(ctx, next) {
+  console.log(2);
+  await next();
+  console.log(5);
+}
+
+async function mid3(ctx, next) {
+  console.log(3);
+  await next();
+  console.log(6);
+}
+
+function compose(middleware) {
+  return function (ctx) {
+    async function dispatch(i) {
+      if (i === middleware.length) {
+        // 所有中间件函数执行完毕
+        return;
+      }
+
+      try {
+        const fn = middleware[i];
+        await fn(ctx, () => dispatch(i + 1));
+      } catch (err) {
+        console.error(err);
+      }
+    }
+
+    return dispatch(0);
+  }
+}
+
+const middleware = [mid1, mid2, mid3];
+compose(middleware)({});
+```
