--- a/_posts/2022-03-09-算法.md
+++ b/_posts/2022-03-09-算法.md
@@ -173,6 +173,7 @@ function quickSort(arr) {
         }
     }
     return quickSort(left).concat([pivot], quickSort(right));
+}
 ```
 
 ## 滑动窗口
@@ -236,10 +237,14 @@ const checkInclusion = function (s1, s2) {
         return false;
     }
 
-        let left = 0;
+    let left = 0;
     let right = 0;
     let valid = 0;
     const window = {};
+    const need = {};
+    for (let c of t) {
+        need[c] = (need[c] || 0) + 1;
+    }
 
     while (right < s2.length) {
         const c = s2[right];
@@ -299,9 +304,11 @@ for (let i = 0; i < nums.length; i++) {
 
 dp[i][j] = dp[i + 1][j - 1] && s[i] === s[j];
 
-因为求 i,j 需要知道 i + 1, j - 1，所以 i 从 len 开始递减。我们只需要计算（长方形）左下一半的值就行，j 一开始等于 i 就可以了。
+因为求 i,j 需要知道 i + 1, j - 1，所以 i 从 len 开始递减。并且 i 肯定是小于等于 j 的（这样才能构成字符串），j 一开始等于 i 就可以了。
+
+最后我们就计算出了 dp table（长方形）左下一半的值.
 ```js
-const n = s.length;
+    const n = s.length;
     const dp = new Array(n).fill(false).map(() => new Array(n).fill(false));
     let maxLen = 0;
     let start = 0;
