--- a/_posts/2023-07-17-前端性能监控.md
+++ b/_posts/2023-07-17-前端性能监控.md
@@ -68,3 +68,66 @@ https://mp.weixin.qq.com/s/NBWEHTe-w0DbrtYl2HyXlw
 
 ### 资料
 http://www.alloyteam.com/2020/01/14184/
+
+## RAIL 模型
+RAIL是一个以用户为中心的性能模型，包括了：
+* Response（响应）：在 50 毫秒内对用户输入做出响应，以确保应用对用户的交互具有即时感。响应时间超过 50 毫秒，用户可能会感觉到明显的延迟。
+* Animation（动画）：在 10 毫秒内生成每一帧的动画，以使动画流畅且具有连贯性。动画帧率低于每秒 60 帧，用户可能会感觉到动画卡顿或不流畅。
+* Idle（空闲）：利用空闲时间执行非关键任务，以提高整体性能。在用户不活动时，可以利用空闲时间完成一些延迟执行的任务，如预加载资源、预渲染页面等。
+* Load（加载）：在 5 秒内完成页面的内容加载，以便用户能够快速访问页面并进行交互。页面加载时间超过 5 秒，用户可能会感到不耐烦并离开页面。
+RAIL 模型的目标是为了提供一种可衡量的指标，帮助开发者评估和优化 Web 应用的性能。通过关注这四个方面，开发者可以在关键的性能指标上进行优化，以提供更好的用户体验。
+
+## 性能指标及计算方式
+Navigation Timing提供了可用于衡量一个网站性能的数据.
+* Redirect：redirectEnd - redirectStart  
+计算条件：redirectEnd 非0且redirectStart非0
+* DNS：domainLookupEnd - domainLookupStart  
+计算条件：domainLookupEnd 非0且domainLookupStart非0
+* TCP：connectEnd - connectStart  
+计算条件：connectEnd 非0且connectStart非0
+* SSL：connectEnd - secureConnectionStart  
+计算条件：connectEnd 非0且secureConnectionStart非0
+* Request：responseStart - requestStart  
+计算条件：responseStart 非0且requestStart非0
+* Response：responseEnd - responseStart  
+计算条件：responseEnd 非0且responseStart非0
+* Load：loadEventEnd - navigationStart  
+计算条件：loadEventEnd 非0且navigationStart 非0
+页面完全加载总时间，是指从NavigationStart事件开始到
+* LoadEventEnd事件结束的时间
+* DomReady：domContentLoaded - fetchStart  
+计算条件：domContentLoaded非0且fetchStart非0
+* DomParse：domInteractive-responseEnd  
+计算条件：domInteractive非0且responseEnd非0
+* Processing：domComplete - domLoading  
+计算条件：domComplete非0且domLoading非0
+* resourceLoad：loadEventStart-domContentLoaded  
+计算条件：loadEventStart非0 且 domContentLoaded 非0
+* TTFB：responseStart - navigationStart
+
+参考资料
+* https://www.w3.org/TR/navigation-timing/
+* https://www.w3.org/TR/navigation-timing-2/
+* https://developer.mozilla.org/zh-CN/docs/Web/API/Navigation_timing_API
+* https://www.volcengine.com/docs/6431/107445
+
+### FP、FCP、LCP
+FP 和 FCP 通过 *performance.getEntriesByType('paint')* 或者 *PerformanceObserver* 方法获取
+[demo](https://github.com/kanglover/learn/blob/master/performance/index.js)
+
+### TTI (可交互时间)
+TTI（Time To Interactive），即从页面加载开始到页面处于完全可交互状态所花费的时间。页面处于完全可交互状态时，满足以下 3 个条件：
+* 页面已经显示有用内容。
+* 页面上的可见元素关联的事件响应函数已经完成注册。
+* 事件响应函数可以在事件发生后的 50ms 内开始执行。
+
+如何获取：
+1. 从起始点（一般选择 FCP 或 FMP）时间开始，向前搜索一个不小于 5s 的静默窗口期。静默窗口期：窗口所对应的时间内没有 Long Task，且进行中的网络请求数不超过 2 个。
+2. 找到静默窗口期后，从静默窗口期向后搜索到最近的一个 Long Task，Long Task 的结束时间即为 TTI。
+3. 如果没有找到 Long Task，以起始点时间作为 TTI。
+4. 如果 2、3 步骤得到的 TTI < DOMContentLoadedEventEnd，以 DOMContentLoadedEventEnd 作为TTI。
+
+### FMP
+FMP（First Meaningful Paint），即首次绘制有意义内容的时间
+
+FMP 指标利用 MutationObserver API 获取
