--- a/_posts/2022-02-23-前端复习之路-React篇.md
+++ b/_posts/2022-02-23-前端复习之路-React篇.md
@@ -108,3 +108,12 @@ hook的优点如下∶
 * 解决render props 因共享数据 而出现嵌套地狱的问题；
 * 能在return之外使用数据的问题。
 
+### React Hooks 解决了什么问题
+React Hooks 是 React 16.8 引入的一项新特性，它解决了以下几个问题：
+
+* 在组件之间复用状态逻辑：在使用类组件时，对于复用一些状态逻辑，需要使用高阶组件或者 render props 等方式，代码会变得复杂和冗余。而使用 Hooks 可以通过自定义的 Hook 来复用状态逻辑，将相关的状态和操作都封装在一个函数中，以便在不同的组件中进行复用。
+* 处理组件之间的副作用：在类组件中，副作用的处理通常在生命周期方法中进行，例如 componentDidMount、componentDidUpdate、componentWillUnmount 等。这样会导致相关的逻辑被分散在不同的生命周期方法中，不易于维护和理解。而使用 useEffect Hook 可以将组件的副作用逻辑集中在一起，使代码更加清晰和易于管理。
+* 函数组件中使用状态：在 React 16.7 之前，函数组件是无状态的，无法使用类组件中的状态（state）。而使用 useState Hook 可以在函数组件中使用状态，使函数组件具备了类组件的状态管理能力。
+* 简化 React 组件的编写：使用 Hooks 可以让组件的编写更加简洁和直观，不需要关注类组件中的繁琐的生命周期方法，也不需要使用 this 关键字。同时，使用函数组件代替类组件，可以减少代码量和提高性能。
+
+总的来说，React Hooks 的出现使得组件的编写更加简单和直观，使得状态管理和副作用处理更加灵活和方便，提高了开发效率和代码的可维护性。但需要注意，Hooks 是在 React 16.8 引入的，如果项目使用的是旧版本的 React，就无法使用 Hooks。
