--- a/_posts/2022-03-09-算法.md
+++ b/_posts/2022-03-09-算法.md
@@ -361,3 +361,101 @@ dp[i][j] = dp[i + 1][j - 1] && s[i] === s[j];
             }
         }
 ```
+
+## 二分查找
+### 经典框架
+```js
+function binarySearch(nums, target) {
+    while (left <= right) {
+        mid = left + (right - left) / 2;
+
+        if (nums[mid] === target) {
+            return mid;
+        }
+        else if (nums[mid] < target) {
+            left = mid + 1;
+        }
+        else {
+            right = mid - 1;
+        }
+    }
+}
+```
+
+### 经典二分查找
+给定一个 n 个元素有序的（升序）整型数组 nums 和一个目标值 target，写一个函数搜索 nums 中的 target，如果目标值存在返回下标，否则返回 -1。
+```js
+var search = function (nums, target) {
+    let left = 0;
+    let right = nums.length - 1;
+
+    while (left <= right) {
+        const mid = Math.floor((left + right) / 2);
+        if (nums[mid] === target) {
+            return mid;
+        }
+        else if (nums[mid] < target) {
+            left = mid + 1;
+        }
+        else {
+            right = mid - 1;
+        }
+    }
+    return -1;
+};
+```
+
+### 寻找左边界的二分查找
+nums 数组中可能有重复元素，找出最左侧的 target
+```js
+var search = function (nums, target) {
+    let left = 0;
+    let right = nums.length - 1;
+
+    while (left <= right) {
+        const mid = Math.floor((left + right) / 2);
+        // 防止两个数值过大造成溢出
+        // const mid = left + Math.floor((left - right) / 2);
+        if (nums[mid] < target) {
+            left = mid + 1;
+        }
+        else {
+            // 因为是要找最左侧的数，所以 = target 的时候还是要收紧边界
+            // nums[mid] <= target 收缩右侧边界
+            right = mid - 1;
+        }
+    }
+
+    if (left >= nums.length || nums[left] !== target) {
+        return -1;
+    }
+
+    return left;
+};
+```
+
+### 寻找右边界的二分查找
+```js
+var search = function (nums, target) {
+    let left = 0;
+    let right = nums.length - 1;
+
+    while (left <= right) {
+        const mid = Math.floor((left + right) / 2);
+        if (nums[mid] > target) {
+            right = mid - 1;
+        }
+        else {
+            // nums[mid] <= target 收缩左侧边界
+            left = mid + 1;
+        }
+    }
+
+    if (right < 0 || nums[right] !== target) {
+        return -1;
+    }
+
+    return right;
+};
+
+```
