--- a/_posts/2023-04-13-前端面试经典题.md
+++ b/_posts/2023-04-13-前端面试经典题.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      每日练习题
+title:      面试经典题
 date:       2023-04-13
 author:     shaokang
 header-img:
@@ -126,22 +126,22 @@ Vue和React都采用了虚拟DOM的 diff 算法来提高性能，并在算法上
 如果没有提供key属性，框架将默认使用节点在列表中的索引作为key。这在一些简单的静态列表中可能不会引起问题，但在动态列表中，特别是在涉及节点插入、删除或移动的情况下，没有明确的key会导致框架无法正确追踪和更新节点的身份。这可能会导致一些奇怪的bug和不稳定的行为，因此，推荐在动态列表中始终使用唯一的key属性来标识节点。
 
 ## vue 的keep-alive的作用是什么？怎么实现的？如何刷新的?
-<keep-alive> 是 Vue 中的一个内置组件，用于缓存动态组件。它的主要作用是在组件切换时将组件的状态保留在内存中，而不是销毁和重新创建组件，从而提高性能并实现组件的复用。
+
+`<keep-alive>` 是 Vue 中的一个内置组件，用于缓存动态组件。它的主要作用是在组件切换时将组件的状态保留在内存中，而不是销毁和重新创建组件，从而提高性能并实现组件的复用。
 
 具体作用如下：
 
-组件缓存：使用 <keep-alive> 包裹的组件会被缓存到内存中，不会被销毁。这样，当组件被切换出去后再切换回来，组件的状态、数据以及 DOM 结构都会保留，避免了重新渲染和初始化的开销，提高了页面的响应速度。
+组件缓存：使用 `<keep-alive>` 包裹的组件会被缓存到内存中，不会被销毁。这样，当组件被切换出去后再切换回来，组件的状态、数据以及 DOM 结构都会保留，避免了重新渲染和初始化的开销，提高了页面的响应速度。
 
 组件复用：由于组件被缓存，切换回来时会直接从内存中取出缓存的组件，而不是重新创建一个新的组件实例。这样可以保持组件的状态和数据不变，实现组件的复用，适用于一些需要保持状态的场景，如表单填写、步骤导航等。
 
-<keep-alive> 的实现方式是通过 Vue 提供的抽象组件 AbstractComponent 来实现的，它在内部使用一个缓存对象来存储被缓存的组件实例。当组件被切换到 <keep-alive> 包裹的容器内时，组件的实例会被缓存到缓存对象中。当组件切换到其他地方时，组件实例会被移除或禁用，但不会销毁。
+`<keep-alive>` 的实现方式是通过 Vue 提供的抽象组件 AbstractComponent 来实现的，它在内部使用一个缓存对象来存储被缓存的组件实例。当组件被切换到 `<keep-alive>` 包裹的容器内时，组件的实例会被缓存到缓存对象中。当组件切换到其他地方时，组件实例会被移除或禁用，但不会销毁。
 
-刷新 <keep-alive> 中的组件可以通过以下方式实现：
-* 使用 include 和 exclude 属性：可以在 <keep-alive> 上使用 include 和 exclude 属性来指定哪些组件需要被缓存或排除在缓存之外。当指定的组件发生变化时，会触发刷新，即重新创建组件实例。
-* 使用 key 属性：在使用 <keep-alive> 包裹的组件上添加 key 属性，每当 key 发生变化时，会触发刷新。通过在组件切换时改变 key 值，可以强制重新创建组件实例。
+刷新 `<keep-alive>` 中的组件可以通过以下方式实现：
+* 使用 include 和 exclude 属性：可以在 `<keep-alive>` 上使用 include 和 exclude 属性来指定哪些组件需要被缓存或排除在缓存之外。当指定的组件发生变化时，会触发刷新，即重新创建组件实例。
+* 使用 key 属性：在使用 `<keep-alive>` 包裹的组件上添加 key 属性，每当 key 发生变化时，会触发刷新。通过在组件切换时改变 key 值，可以强制重新创建组件实例。
 
 ## vue 是怎么解析template的? template会变成什么?
-
 Vue在解析和编译模板时，会经过以下几个步骤：
 1. 模板解析：Vue会将模板字符串解析成抽象语法树（AST，Abstract Syntax Tree）。这个过程包括词法分析（将模板字符串转换为词法单元）和语法分析（构建抽象语法树）。
 2. 静态分析：在静态分析阶段，Vue会遍历抽象语法树，并收集模板中的静态内容，如静态节点和静态属性。这些静态内容在每次渲染时都不会变化，可以被提前标记和优化。
