--- a/_posts/2022-02-23-前端复习之路-工程化篇.md
+++ b/_posts/2022-02-23-前端复习之路-工程化篇.md
@@ -127,6 +127,65 @@ webpackPreload 会在父 chunk 加载时并行下载文件。
 
 Re: [一文吃透 Webpack 核心原理](https://mp.weixin.qq.com/s/SbJNbSVzSPSKBe2YStn2Zw)
 
+#### 模块联邦
+假设
+
+```js
+// app1/webpack.config.js
+module.exports = {
+  ...
+  plugins: [
+    new ModuleFederationPlugin({
+      name: "app1",
+      library: { type: "var", name: "app1" },
+      filename: "remoteEntry.js",
+      exposes: {
+        './Button': './src/Button',
+        './say': path.join(__dirname, './say.js')
+      },
+      shared: { react: { singleton: true }, 'react-dom': { singleton: true } },
+    })
+  ]
+};
+```
+
+```js
+// app2/webpack.config.js
+module.exports = {
+  ...
+  plugins: [
+    new ModuleFederationPlugin({
+      name: "app2",
+      library: { type: "var", name: "app2" },
+      remotes: {
+        // 或者直接导入 app1@http://127.0.0.1:3001/remoteEntry.js
+        app1: "app1",
+      }
+    })
+  ]
+};
+
+// or
+// <!-- app2/index.html -->
+<script src="http://127.0.0.1:3001/remoteEntry.js"></script>
+
+// app2/index.js
+const remoteSay = import('app1/say');
+remoteSay.then(({ say }) => {
+  say('app2');
+});
+```
+app2 远程模块的加载步骤：
+* 下载并执行 remoteEntry.js（直接定义的方式：通过 JSONP 的形式去加载远程应用，拿到远程应用的 remoteEntry.js 文件后再去执行），挂载入口点对象到 window.app1，他有两个函数属性，init 和 get。init 方法用于初始化作用域对象 initScope，get 方法用于下载 moduleMap 中导出的远程模块。
+* 加载 app1 到本地模块
+* 创建 app1.init 的执行环境，收集依赖到共享作用域对象 shareScope
+* 执行 app1.init，初始化 initScope
+* 用户 import 远程模块时调用 app1.get(moduleName) 通过 Jsonp 懒加载远程模块，然后缓存在全局对象 window['webpackChunk' + appName]
+* 通过 webpack_require 读取缓存中的模块，执行用户回调
+
+共享依赖：  
+当应用配置了 shared 后，那么依赖了这些共享依赖的模块在加载前都会先调用 __webpack_require__.I 去初始化共享依赖，使用 __webpack_require__.S 对象来保存着每个应用的共享依赖版本信息，每个应用引用共享依赖时，会根据不同的自己配制的规则从__webpack_require__.S 获取到适合的依赖版本，__webpack_require__.S是应用间共享依赖的桥梁。
+
 ### 2. vite
 现在常用的构建工具如 webpack，主要是通过抓取 - 编译 - 构建整个应用的代码生成一份编译、优化后能良好兼容各个浏览器的生产环境代码。在开发环境流程也基本相同，需要先将整个应用构建打包后，再把打包后的代码交给 dev server。
 
