更新近期内容

--- a/_posts/2022-02-23-前端复习之路-网络篇.md
+++ b/_posts/2022-02-23-前端复习之路-网络篇.md
@@ -20,6 +20,10 @@ URL 定位资源，用 HTTP 动词（GET,POST,DELETE）描述操作。
 （6）HTTPS 握手：如果使用的是 HTTPS 协议，在通信前还存在 TLS 的一个四次握手的过程。首先由客户端向服务器端发送使用的协议的版本号、一个随机数和可以使用的加密方法。服务器端收到后，确认加密的方法，也向客户端发送一个随机数和自己的数字证书。客户端收到后，首先检查数字证书是否有效，如果有效，则再生成一个随机数，并使用证书中的公钥对随机数加密，然后发送给服务器端，并且还会提供一个前面所有内容的 hash 值供服务器端检验。服务器端接收后，使用自己的私钥对数据解密，同时向客户端发送一个前面所有内容的 hash 值供客户端检验。这个时候双方都有了三个随机数，按照之前所约定的加密方法，使用这三个随机数生成一把秘钥，以后双方通信前，就使用这个秘钥对数据进行加密后再传输。  
 
 
+## HTTP
+讲的不错
+https://www.xiaolincoding.com/network/2_http/http_interview.html
+
 ## HTTPS 加密原理
 see: https://zhuanlan.zhihu.com/p/43789231
 
